--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,7 +36,7 @@ test:
     - pip
 
 about:
-  home: https://github.com/snok
+  home: https://github.com/snok/flake8-type-checking
   summary: A flake8 plugin for managing type-checking imports & forward references
   license: BSD-3-Clause
   license_file: LICENSE
