--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,7 @@ requirements:
     - poetry-core >=1.0.0
     - python >=3.6
   run:
+    - aspy.refactor-imports
     - flake8
     - python >=3.6
 
